--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -160,6 +160,7 @@
 
 .clc-message__text {
     display: block;
+    white-space: pre-wrap;
 }
 
 .clc-message__text a {
